# AllocatePlusInterface

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tailwind.config.cjs  tsconfig.json
public/: index.html
src/: browser.rs  main.rs  parser.rs  scheduler.rs
src/rust/: browser.rs  main.rs  parser.rs  scheduler.rs  scheduler_tests.rs
src/svelte/: App.svelte  app.svelte  main.ts
src/svelte/Components/: Calendar.svelte  Login.svelte
src/svelte/components/: calendar.svelte  filter.svelte  login.svelte
src/svelte/props/: option.svelte
