[package]
name = "allocate_plus_interface"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
json_value_merge = "0.1"
chrono = "0.4.19"
thirtyfour = "0.25.1"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
